課題再提出

--- a/app/views/properties/confirm.html.erb
+++ b/app/views/properties/confirm.html.erb
@@ -1,8 +1,8 @@
 <h3>以下の内容で登録しますか？</h3>
 <%= form_with(model: @property, url: properties_path, local: true) do |form| %>
-  <%= form.hidden_field :name %>
+  <%= form.hidden_field :property_name %>
   <%= form.hidden_field :rent %>
-  <%= form.hidden_field :adress %>
+  <%= form.hidden_field :address %>
   <%= form.hidden_field :age %>
   <%= form.hidden_field :note %>
   <p>物件情報:<%= @property.property_name %></p>
@@ -11,6 +11,24 @@
   <p>築年数:<%= @property.age %></p>
   <p>備考:<%= @property.note %></p>
 
-  <%= form.submit "登録する" %>
-  <%= form.submit "戻る", name: 'back' %>
+  <% n ||= 0 %>
+  <%= form.fields_for :nearest_stations do |nearest_station| %>
+    <%# チェリー本コラム参考 %>
+    <h2>最寄り駅<%= n += 1 %></h2>
+    <div class="line_name">
+      <%= nearest_station.label :路線名 %><br>
+      <%= nearest_station.text_field :line_name %>
+    </div>
+    <div class="station">
+      <%= nearest_station.label :駅名 %><br>
+      <%= nearest_station.text_field :station_name %>
+    </div>
+    <div class="time">
+      <%= nearest_station.label :徒歩分数 %><br>
+      <%= nearest_station.text_field :time %>分<br>
+    </div>
+
+   <%= form.submit "登録する" %>
+   <%= form.submit "戻る", name: 'back' %>
+  <% end %> 
 <% end %>
